src/objects/seikyuu__c.object
<CustomObject>
    <description>インターブレインズ用</description>
    <fields>
        <fullName>Acid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>請求</relationshipLabel>
        <relationshipName>KytH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>anken__c</fullName>
        <label>案件名</label>
        <referenceTo>CustomObject11__c</referenceTo>
        <relationshipLabel>請求管理</relationshipLabel>
        <relationshipName>LnkAnkenToSeikyu</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kingaku_zeikomi__c</fullName>
        <label>金額（税込）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kingaku_zeinuki__c</fullName>
        <label>金額（税抜）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>memo__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>seikyuubi__c</fullName>
        <label>請求日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sumi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求済みフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>syouhizei__c</fullName>
        <label>消費税</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>請求</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>請求№</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>